More rendering control handed over to client side.
coreGame objects can now take over the frame drawing process by overriding "DrawFrame()"
Started adding a 'vsRenderer::Settings' object which allows setting modifications to render parameters.
Current options are whether to write to color/depth targets, and overridden shaders for standard normal/textured/lit/lit+textured rendering.
Note that these 'settings' objects are currently only obeyed by the vsRendererShader rendering path.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,7 +108,7 @@ set(GRAPHICS_SOURCES
 	VS/Graphics/VS_RenderQueue.h
 	VS/Graphics/VS_RenderTarget.cpp
 	VS/Graphics/VS_RenderTarget.h
-	#VS/Graphics/VS_Renderer.cpp
+	VS/Graphics/VS_Renderer.cpp
 	VS/Graphics/VS_Renderer.h
 	VS/Graphics/VS_RendererBloom.cpp
 	VS/Graphics/VS_RendererBloom.h
