--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,9 +18,11 @@ if(UNIX)
 else()
 	find_library(GLEW_LIBRARY GLEW32 REQUIRED)
 endif()
-find_path(GLEW_INCLUDE_DIR glew.h)
+find_path(GLEW_INCLUDE_DIR glew.h
+	PATH /usr/include/GL )
 find_library(BOX2D_LIBRARY Box2D REQUIRED)
-find_path(BOX2D_INCLUDE_DIR Box2D.h)
+find_path(BOX2D_INCLUDE_DIR Box2D.h
+	PATH /usr/local/include/Box2D )
 
 set(VS_LIBRARIES
 	${OPENGL_LIBRARIES}
