--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,6 +128,8 @@ set(GRAPHICS_SOURCES
 	VS/Graphics/VS_Screen.h
 	VS/Graphics/VS_Shader.cpp
 	VS/Graphics/VS_Shader.h
+	VS/Graphics/VS_ShaderSuite.cpp
+	VS/Graphics/VS_ShaderSuite.h
 	VS/Graphics/VS_Sprite.cpp
 	VS/Graphics/VS_Sprite.h
 	VS/Graphics/VS_Texture.cpp
