--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,8 +21,8 @@ endif()
 find_path(GLEW_INCLUDE_DIR glew.h
 	PATH /usr/include/GL /usr/local/include/GL )
 find_library(BOX2D_LIBRARY Box2D REQUIRED)
-find_path(BOX2D_INCLUDE_DIR Box2D.h
-	PATH /usr/local/include/Box2D )
+find_path(BOX2D_INCLUDE_DIR Box2D/Box2D.h
+	PATH /usr/local/include )
 
 set(VS_LIBRARIES
 	${OPENGL_LIBRARIES}
