Adds dynamic materials which can be adjusted from code.
Cleans up ALL the old material interfaces for creating materials from
code, and replaces them with a single, more flexible interface to create
and modify them from code.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,6 +97,8 @@ set(GRAPHICS_SOURCES
 	VS/Graphics/VS_Color.h
 	VS/Graphics/VS_DisplayList.cpp
 	VS/Graphics/VS_DisplayList.h
+	VS/Graphics/VS_DynamicMaterial.cpp
+	VS/Graphics/VS_DynamicMaterial.h
 	VS/Graphics/VS_Entity.cpp
 	VS/Graphics/VS_Entity.h
 	VS/Graphics/VS_Fog.cpp
