--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,6 +139,8 @@ set(GRAPHICS_SOURCES
 	VS/Graphics/VS_RenderPipeline.h
 	VS/Graphics/VS_RenderPipelineStage.cpp
 	VS/Graphics/VS_RenderPipelineStage.h
+	VS/Graphics/VS_RenderPipelineStageBlit.cpp
+	VS/Graphics/VS_RenderPipelineStageBlit.h
 	VS/Graphics/VS_RenderPipelineStageScenes.cpp
 	VS/Graphics/VS_RenderPipelineStageScenes.h
 	# VS/Graphics/VS_RenderScheme.cpp
