Add SDLMain library for Windows builds.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,8 @@ if(UNIX)
 	find_library(GLEW_LIBRARY GLEW REQUIRED)
 	find_library(PTHREAD_LIBRARY pthread)
 else()
+	find_library(SDLMAIN_LIBRARY SDL2main REQUIRED
+		PATH C:/src/buildzone/lib/x86/)
 	find_library(GLEW_LIBRARY GLEW32 REQUIRED
 		PATH c:/src/buildzone/lib/Release/Win32)
 endif()
@@ -74,6 +76,7 @@ set(VS_DEBUG_LIBRARIES
 	${SDL_LIBRARY}
 	${SDL_IMAGE_LIBRARY}
 	${SDL_MIXER_LIBRARY}
+	${SDLMAIN_LIBRARY}
 	${GLEW_LIBRARY}
 	${BOX2D_LIBRARY_DEBUG}
 	${PTHREAD_LIBRARY}
@@ -85,6 +88,7 @@ set(VS_RELEASE_LIBRARIES
 	${SDL_LIBRARY}
 	${SDL_IMAGE_LIBRARY}
 	${SDL_MIXER_LIBRARY}
+	${SDLMAIN_LIBRARY}
 	${GLEW_LIBRARY}
 	${BOX2D_LIBRARY_RELEASE}
 	${PTHREAD_LIBRARY}
