Add vsFloatImage.  Like vsImage, but stores data as full floats.
If turned into a GPU texture, uses half-floats.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -297,6 +297,8 @@ set(UTILS_SOURCES
 	VS/Utils/VS_HashTable.h
 	#VS/Utils/VS_HashTableStore.cpp
 	VS/Utils/VS_HashTableStore.h
+	VS/Utils/VS_FloatImage.cpp
+	VS/Utils/VS_FloatImage.h
 	VS/Utils/VS_Image.cpp
 	VS/Utils/VS_Image.h
 	VS/Utils/VS_LinkedList.h
