Starting on LOD support for vsModel.
Not yet properly functional, but the skeleton of how the system will work is now
visible.  Anything using the old API is now operating on just LOD 0.
(top LOD)

General scheme is that a vsModel can have multiple LODs, each of which
consists of some number of vsFragments.  By setting the vsModel's
current LOD level, that controls which set of vsFragments get drawn.

Eventual goal is that vsModelInstance will also be able to set a LOD
level, and the vsModelInstanceGroup will automatically do multiple draws
in order to get each instance drawn using the correct LOD.

This commit also splits vsModelInstance and vsModelInstanceGroup out
into their own source files;  they really ought to have already been
separate.  They were cluttering the (already disorganised) vsModel
source terribly, and this seemed like a good first step toward bringing
the vsModel codebase back toward some vague sort of sanity.  xD

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -177,6 +177,10 @@ set(GRAPHICS_SOURCES
 	VS/Graphics/VS_Mesh.h
 	VS/Graphics/VS_Model.cpp
 	VS/Graphics/VS_Model.h
+	VS/Graphics/VS_ModelInstance.cpp
+	VS/Graphics/VS_ModelInstance.h
+	VS/Graphics/VS_ModelInstanceGroup.cpp
+	VS/Graphics/VS_ModelInstanceGroup.h
 	VS/Graphics/VS_RenderBuffer.cpp
 	VS/Graphics/VS_RenderBuffer.h
 	VS/Graphics/VS_RenderQueue.cpp
